<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideKeyboard"
    tools:context=".Register1stActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30" />

        <TextView
            android:id="@+id/validNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/last_name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30" />

        <TextView
            android:id="@+id/validLastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mLastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz "
            android:hint="@string/mothers_last_name_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="30" />

        <TextView
            android:id="@+id/validmLastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edit"
            android:inputType="textVisiblePassword"
            android:maxLength="255" />

        <TextView
            android:id="@+id/validEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:hint="@string/password_edit"
                android:inputType="textPassword"
                android:maxLength="30" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/validPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="hideKeyboard"
                    android:text="@string/day_text" />

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/monthTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="hideKeyboard"
                    android:text="@string/month_text" />

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="hideKeyboard"
                    android:text="@string/year_text" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/validDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hideKeyboard"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="continueRegister"
            android:text="@string/next_button" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>