<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInSignUpOptionsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogInPressed"
            android:text="@string/log_in_text"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="244dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onSignUpPressed"
            android:text="@string/sign_up_text"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="79dp" />

        <Button
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/facebook_text"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="68dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>