<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".SelfProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/forPicImageView"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forAgeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/reportImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/alert_icon_96" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reqFriendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:enabled="false"
            android:text="@string/add_friend" />

        <Button
            android:id="@+id/msgForButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/messages_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forPrevEvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_ev_button" />

        <Button
            android:id="@+id/forNextEvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_ev_button" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ListView
            android:id="@+id/forPrevEvListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="right"
            android:scrollbarStyle="outsideOverlay" />

        <ListView
            android:id="@+id/forNextEvListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="right"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>